# transformer-playground

./: Dockerfile  README.md  pyproject.toml
notebooks/: test.ipynb
requirements/: conda-environment.yaml
scripts/: build_image.sh  run_container.sh
src/tplayground/: params.py
src/tplayground/layers/: __init__.py  activations.py  attention.py  embeddings.py  ff.py  heads.py  transformer.py
src/tplayground/models/: __init__.py  bert.py  gpt.py
src/tplayground/models/base/: encoder.py
src/tplayground/scripts/: bert_test.py
src/tplayground/utils/: constants.py  params.py
