[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-playground"
version = "0.0.1"
authors = [{name = "Nikolai Zakharov"}]

[project.scripts]
bert_inference_test = "tplayground.scripts.bert_test:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tplayground"]
